<resources>
    <string name="app_name">IMC</string>
    <string name="SplashText">Bienvenido Usuario</string>
    <string name="NombreMain">Your Name</string>
    <string name="HeightAltura" />
    <string name="HeightMain">Your Height</string>
    <string name="WeightMain">Your Weight</string>
    <string name="MaleMain">Male</string>
    <string name="FemaleMain">Female</string>
    <string name="IMCmain">IMC</string>
    <string name="hintIMC">IMC:</string>
    <string name="Nombre">Your name:</string>
    <string name="Ideal">Peso Ideal</string>
    <string name="Energia">Energy</string>
    <string name="Peso">YourWeight</string>
    <string name="PesoSano">Open Healthy Weight</string>
    <string name="votoporvoto">Recalculate</string>
</resources>
