<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebastianchimal.imc.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/NombreMain"
        android:ems="10"
        android:id="@+id/nombre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/height"
        android:layout_below="@+id/nombre"
        android:layout_alignLeft="@+id/nombre"
        android:layout_alignStart="@+id/nombre"
        android:layout_marginTop="58dp"
        android:hint="@string/HeightAltura"
        android:text="@string/HeightMain" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weight"
        android:layout_below="@+id/height"
        android:layout_alignLeft="@+id/height"
        android:layout_alignStart="@+id/height"
        android:text="@string/WeightMain" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IMCmain"
        android:id="@+id/imc"
        android:onClick="calcularIMC"
        android:layout_below="@+id/weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaleMain"
        android:id="@+id/male"
        android:layout_below="@+id/weight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FemaleMain"
        android:id="@+id/female"
        android:layout_below="@+id/weight"
        android:layout_toRightOf="@+id/imc"
        android:layout_toEndOf="@+id/imc"
        android:checked="false" />
</RelativeLayout>
